--- a/2_6.html
+++ b/2_6.html
@@ -30,7 +30,7 @@ console.log(declinationOfNumber(5, "стул", "стула", "стульев"));
   if (count > 1 && count < 5){
     return two;
   } 
-   if (count = 1 ){
+   if (count === 1 ){
     return one;
   }else{
     return five;
