--- a/2_3.html
+++ b/2_3.html
@@ -27,7 +27,7 @@
     console.log(`a - b = ${a - b}`);
   } else if (a < 0 && b < 0){
     console.log(`a * b = ${a * b}`);
-  } else {
+  } else if ((a < 0 && b < 0) || (a > 0 && b < 0)){
     console.log(`a + b = ${a + b}`);
   }
 </script>
