--- a/3_3.html
+++ b/3_3.html
@@ -29,9 +29,9 @@
     },
   ];
 
-  products.forEach((prices) => {
-    prices.price = prices.price - (prices.price*15/100)
-  })
+  products.forEach((product) => {
+    product.price = product.price - (product.price * 15 / 100);
+  });
   console.log (products);
 </script>
 </body>
