--- a/3_1.html
+++ b/3_1.html
@@ -19,15 +19,15 @@
 <script>
   "use strict";
 
-  for(let i = 0; i < 11; i++){
-    if (i === 0){
-      console.log (`${i} - это ноль`)
+  for (let i = 0; i < 11; i++) {
+    if (i === 0) {
+      console.log (`${i} - это ноль`);
     }
-    if (i > 0 && i % 2 === 0){
-      console.log (`${i} - четное число`)
+    if (i > 0 && i % 2 === 0) {
+      console.log (`${i} - четное число`);
     }
-    if (i % 2 !== 0){
-    console.log (`${i} - нечетное число`)
+    if (i % 2 !== 0) {
+    console.log (`${i} - нечетное число`);
     }
   }
 </script>
